# transportation-splitter

./: .gitignore  CHANGELOG.md  CODE-OF-CONDUCT.md  ProcessDetails.md  README.md  TransportationSplitter.md  TransportationSplitter.py  lib.py  pyproject.toml  requirements.txt  split_tests.py  test_apply_lr.py  test_e2e.py  test_skip_debug.py  test_split.py  test_wrangler.py  transportation_splitter.py
.github/: advanced-issue-labeler.yml
.github/DISCUSSION_TEMPLATE/: data_feedback.yml
.github/ISSUE_TEMPLATE/: action_item.yaml  bug.yml  feature.yml  phase_of_development.yml  question.yaml  release-feedback.yaml
.github/workflows/: formatting.yaml  integration_tests.yaml  issue-labeler-node16.yml  issue-labeler.yml  precommit-check.yml  publish.yaml  tests.yaml  unit_tests.yaml
.llms/: DeepTechnicalSummary.md
.llms/rules/: project.md
How to Contribute/: Appendix_A.md  CONTRIBUTING.md
examples/: 2024-11-13-create-split-table.sql  aws_glue_notebook.py
test/data/: README.md
tests/: __init__.py  conftest.py
tests/data/: README.md  boulder.parquet  boulder_connectors.parquet  boulder_segments.parquet  connector.parquet  segment.parquet
tests/integration/: __init__.py  test_boulder_e2e.py  test_e2e.py  test_intermediate_files.py
tests/unit/: __init__.py  test_apply_lr.py  test_properties.py  test_split.py
transportation_splitter/: __init__.py  _pipeline_helpers.py  _resolve_refs.py  _spark_udfs.py  config.py  geometry.py  linear_reference.py  models.py  pipeline.py  properties.py  wrangler.py
