[tool.poetry]
name = "transportation-splitter"
version = "0.1.0"
description = ""
authors = ["Cozmin Bantea <ibantea@microsoft.com>", "Brad Richardson <bradrichardson@meta.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyproj = ">=3.6.1"
pyspark = [
    # AWS Glue 4.0
    {version = "3.3.0", python = "3.10"},
    # Databricks 15.4 LTS
    {version = "3.5.0", python = "3.11"},
]
apache-sedona = "^1.6.1"
shapely = "^2.0.6"

[tool.poetry.group.test.dependencies]
pytest = ">=8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
