[project]
name = "transportation-splitter"
version = "0.2.0"
description = "Pyspark app for splitting Overture transportation segments to simplify consuming the data"
authors = [
    {name = "Brad Richardson", email = "bradrichardson@meta.com"},
    {name = "Jennings Anderson", email = "jenningsa@meta.com"},
]
maintainers = [
    {name = "Adam Lastowka", email = "adam@overturemaps.org"},
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["geospatial", "transportation", "overture", "pyspark", "data-processing", "maps"]
dependencies = [
    "pyproj>=3.6.1",
    "pyspark>=3.5,<3.6",
    "apache-sedona>=1.8.0",
    "shapely>=2.0",
    "pandas",
]

[project.urls]
Homepage = "https://overturemaps.org"
Source = "https://github.com/OvertureMaps/transportation-splitter"
Issues = "https://github.com/OvertureMaps/transportation-splitter/issues"

[dependency-groups]
dev = [
    "ruff>=0.8",
]
test = [
    "pyarrow>=22.0.0",
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s]: %(message)s"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "F405",  # may be undefined from star imports (PySpark idiom)
    "F403",  # star imports used (PySpark idiom)
]
